--- a/navbar-fixed-top.css
+++ b/navbar-fixed-top.css
@@ -2,3 +2,22 @@ body {
   min-height: 2000px;
   padding-top: 70px;
 }
+
+
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
