--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3132,7 +3132,7 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
+  background-color: #855cd6;/*#286090;*/
   border-color: #204d74;
 }
 .btn-primary:active,
@@ -4976,12 +4976,13 @@ a.badge:focus {
 
 .jumbotron h1,
 .jumbotron .h1 {
-  color: inherit;
+  color: white;
 }
 .jumbotron p {
   margin-bottom: 15px;
   font-size: 21px;
   font-weight: 200;
+  color: white;
 }
 .jumbotron > hr {
   border-top-color: #d5d5d5;
