--- a/navbar-fixed-top.css
+++ b/navbar-fixed-top.css
@@ -1,6 +1,6 @@
 body {
   min-height: 2000px;
-  padding-top: 70px;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -21,4 +21,16 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+}
+
+
+jumbotron {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  color: inherit;
+  background-color: #eee;
+  background: url("../images/pipeline_combine_white.png") center center ;
+  background-size: cover;
+
 }
