--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1412,7 +1412,7 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ccc;
 }
 ul,
 ol {
