--- a/navbar-fixed-top.css
+++ b/navbar-fixed-top.css
@@ -19,10 +19,14 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 50px;
   background-color: #f5f5f5;
 }
 
 .pipeline-div-edit {
       text-align: left;
+}
+
+.navbar-fixed-top {
+    top: -15px;
 }
