--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -112,48 +112,70 @@
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
-          <layout class="QGridLayout" name="gridLayout_2">
-           <property name="spacing">
-            <number>6</number>
-           </property>
-           <item row="1" column="0">
-            <widget class="QTableWidget" name="category_tableWidget">
-             <attribute name="horizontalHeaderVisible">
-              <bool>true</bool>
-             </attribute>
-             <attribute name="verticalHeaderVisible">
-              <bool>false</bool>
-             </attribute>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QTableWidget" name="assets_tableWidget"/>
-           </item>
-           <item row="1" column="2">
-            <widget class="QTableWidget" name="components_tableWidget"/>
-           </item>
-           <item row="0" column="0">
-            <widget class="QPushButton" name="catagory_pushButton">
-             <property name="text">
-              <string>Category</string>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QSplitter" name="splitter">
+             <property name="lineWidth">
+              <number>1</number>
              </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QPushButton" name="asset_pushButton">
-             <property name="text">
-              <string>Asset</string>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
              </property>
-             <property name="checkable">
-              <bool>false</bool>
+             <property name="handleWidth">
+              <number>10</number>
              </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="component_pushButton">
-             <property name="text">
-              <string>Component</string>
-             </property>
+             <widget class="QWidget" name="verticalLayoutWidget">
+              <layout class="QVBoxLayout" name="verticalLayout_10">
+               <item>
+                <widget class="QPushButton" name="catagory_pushButton">
+                 <property name="text">
+                  <string>Category</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QTableWidget" name="category_tableWidget">
+                 <attribute name="horizontalHeaderVisible">
+                  <bool>true</bool>
+                 </attribute>
+                 <attribute name="verticalHeaderVisible">
+                  <bool>false</bool>
+                 </attribute>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QWidget" name="verticalLayoutWidget_2">
+              <layout class="QVBoxLayout" name="verticalLayout_13">
+               <item>
+                <widget class="QPushButton" name="asset_pushButton">
+                 <property name="text">
+                  <string>Asset</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>false</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QTableWidget" name="assets_tableWidget"/>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QWidget" name="verticalLayoutWidget_3">
+              <layout class="QVBoxLayout" name="verticalLayout_14">
+               <item>
+                <widget class="QPushButton" name="component_pushButton">
+                 <property name="text">
+                  <string>Component</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QTableWidget" name="components_tableWidget"/>
+               </item>
+              </layout>
+             </widget>
             </widget>
            </item>
           </layout>
@@ -302,7 +324,7 @@
            <item>
             <widget class="QTabWidget" name="asset_component_files_tabWidget">
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <widget class="QWidget" name="tab">
               <attribute name="title">
@@ -339,6 +361,16 @@
                <string>Masters</string>
               </attribute>
               <layout class="QVBoxLayout" name="verticalLayout_8">
+               <item>
+                <widget class="QCheckBox" name="publicMaster_checkBox">
+                 <property name="text">
+                  <string>Public master</string>
+                 </property>
+                 <property name="checked">
+                  <bool>false</bool>
+                 </property>
+                </widget>
+               </item>
                <item>
                 <widget class="QTableWidget" name="component_masters_tableWidget">
                  <property name="rowCount">
@@ -434,38 +466,65 @@
            <attribute name="title">
             <string>Scenes</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_6">
-            <property name="spacing">
-             <number>6</number>
+           <layout class="QVBoxLayout" name="verticalLayout_17">
+            <property name="leftMargin">
+             <number>12</number>
             </property>
-            <item row="0" column="2">
-             <widget class="QPushButton" name="shot_pushButton">
-              <property name="text">
-               <string>Shot</string>
+            <property name="topMargin">
+             <number>12</number>
+            </property>
+            <property name="rightMargin">
+             <number>12</number>
+            </property>
+            <property name="bottomMargin">
+             <number>12</number>
+            </property>
+            <item>
+             <widget class="QSplitter" name="splitter_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
-              <property name="checkable">
-               <bool>false</bool>
+              <property name="handleWidth">
+               <number>10</number>
               </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QTableWidget" name="shots_tableWidget"/>
-            </item>
-            <item row="1" column="1">
-             <widget class="QTableWidget" name="sequences_tableWidget">
-              <attribute name="horizontalHeaderVisible">
-               <bool>true</bool>
-              </attribute>
-              <attribute name="verticalHeaderVisible">
-               <bool>false</bool>
-              </attribute>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QPushButton" name="sequence_pushButton">
-              <property name="text">
-               <string>Sequence</string>
-              </property>
+              <widget class="QWidget" name="verticalLayoutWidget_4">
+               <layout class="QVBoxLayout" name="verticalLayout_15">
+                <item>
+                 <widget class="QPushButton" name="sequence_pushButton">
+                  <property name="text">
+                   <string>Sequence</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QTableWidget" name="sequences_tableWidget">
+                  <attribute name="horizontalHeaderVisible">
+                   <bool>true</bool>
+                  </attribute>
+                  <attribute name="verticalHeaderVisible">
+                   <bool>false</bool>
+                  </attribute>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+              <widget class="QWidget" name="verticalLayoutWidget_5">
+               <layout class="QVBoxLayout" name="verticalLayout_16">
+                <item>
+                 <widget class="QPushButton" name="shot_pushButton">
+                  <property name="text">
+                   <string>Shot</string>
+                  </property>
+                  <property name="checkable">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QTableWidget" name="shots_tableWidget"/>
+                </item>
+               </layout>
+              </widget>
              </widget>
             </item>
            </layout>
