--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -364,7 +364,7 @@
                <item>
                 <widget class="QCheckBox" name="publicMaster_checkBox">
                  <property name="text">
-                  <string>Public master</string>
+                  <string>Visible in asstes bank</string>
                  </property>
                  <property name="checked">
                   <bool>false</bool>
