--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -31,7 +31,7 @@
      <number>6</number>
     </property>
     <item>
-     <widget class="QWidget" name="widget_5" native="true">
+     <widget class="QWidget" name="projects_tooltip_widget" native="true">
       <property name="styleSheet">
        <string notr="true"/>
       </property>
@@ -49,13 +49,13 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="projects_tooltip_label">
          <property name="styleSheet">
           <string notr="true">background-color: #682ad0; color: white;
 font: 13pt &quot;.SF NS Text&quot;;</string>
          </property>
          <property name="text">
-          <string>Non commercial license of pipeline</string>
+          <string/>
          </property>
          <property name="scaledContents">
           <bool>false</bool>
