--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -81,9 +81,9 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
         <number>6</number>
        </property>
        <item>
-        <widget class="QPushButton" name="users_pushButton">
+        <widget class="QPushButton" name="asset_scenes_switch_pushButton">
          <property name="text">
-          <string>No User</string>
+          <string>Scenes Mode</string>
          </property>
         </widget>
        </item>
@@ -95,9 +95,9 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="asset_scenes_switch_pushButton">
+        <widget class="QPushButton" name="users_pushButton">
          <property name="text">
-          <string>Scenes Mode</string>
+          <string>No User</string>
          </property>
         </widget>
        </item>
@@ -815,6 +815,8 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
      <string>Help</string>
     </property>
     <addaction name="actionDocumentation"/>
+    <addaction name="actionBug_reports"/>
+    <addaction name="separator"/>
     <addaction name="actionAbout"/>
    </widget>
    <widget class="QMenu" name="menuTools">
@@ -852,7 +854,7 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
   </action>
   <action name="actionDocumentation">
    <property name="text">
-    <string>Documentation</string>
+    <string>Pipeline website</string>
    </property>
   </action>
   <action name="actionCollect_component">
@@ -863,6 +865,20 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
   <action name="playblast_shot_options">
    <property name="text">
     <string>Playblast options</string>
+   </property>
+  </action>
+  <action name="actionBug_reports">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show bug reports</string>
+   </property>
+   <property name="toolTip">
+    <string>Show bug reports</string>
    </property>
   </action>
  </widget>
