--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -105,6 +105,14 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
      </widget>
     </item>
     <item>
+     <widget class="QLineEdit" name="assetsFilter_lineEdit"/>
+    </item>
+    <item>
+     <widget class="QWidget" name="treeWidget" native="true">
+      <layout class="QVBoxLayout" name="verticalLayout_18"/>
+     </widget>
+    </item>
+    <item>
      <widget class="Line" name="line_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
