--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -109,6 +109,12 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
     </item>
     <item>
      <widget class="QWidget" name="treeWidget" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>300</height>
+       </size>
+      </property>
       <layout class="QVBoxLayout" name="verticalLayout_18"/>
      </widget>
     </item>
