--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>462</width>
-    <height>1500</height>
+    <height>1516</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -156,20 +156,7 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
         <height>200</height>
        </size>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_18">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-      </layout>
+      <layout class="QHBoxLayout" name="verticalLayout_18"/>
      </widget>
     </item>
     <item>
