--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -245,14 +245,14 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
                 </property>
                 <layout class="QGridLayout" name="gridLayout_3">
                  <item row="0" column="1">
-                  <widget class="QLabel" name="component_name_label">
+                  <widget class="QLabel" name="stage_path_label">
                    <property name="text">
-                    <string>Component Name</string>
+                    <string>Stage path</string>
                    </property>
                   </widget>
                  </item>
                  <item row="6" column="1">
-                  <widget class="QLabel" name="component_note_label">
+                  <widget class="QLabel" name="stage_note_label">
                    <property name="text">
                     <string>Comment</string>
                    </property>
@@ -285,7 +285,7 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
                   </widget>
                  </item>
                  <item row="4" column="1">
-                  <widget class="QLabel" name="component_info_label">
+                  <widget class="QLabel" name="stage_author_label">
                    <property name="text">
                     <string>author</string>
                    </property>
