--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -136,7 +136,7 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -455,10 +455,44 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
           <layout class="QHBoxLayout" name="verticalLayout_18"/>
          </widget>
         </item>
+        <item>
+         <widget class="QWidget" name="tree_changed_opts_widget" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_2">
+             <property name="text">
+              <string>Discard changes</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton">
+             <property name="text">
+              <string>Commit changes</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
        </layout>
        <zorder>stages_version_splitter</zorder>
        <zorder>project_widget</zorder>
        <zorder>widget_5</zorder>
+       <zorder>tree_changed_opts_widget</zorder>
       </widget>
      </widget>
     </item>
