--- a/ui/pipeline_main_UI.ui
+++ b/ui/pipeline_main_UI.ui
@@ -320,7 +320,7 @@ font: 13pt &quot;.SF NS Text&quot;;</string>
                </item>
               </layout>
              </widget>
-             <widget class="QWidget" name="tab_3">
+             <widget class="QWidget" name="playblastsTab">
               <attribute name="title">
                <string>Playblasts</string>
               </attribute>
